--- a/config/src/main/resources/configs/uap-test.yml
+++ b/config/src/main/resources/configs/uap-test.yml
@@ -7,7 +7,7 @@ spring:
     username: root
     password: admin123456!@#
   jpa:
-    database-platform: org.hibernate.dialect.MySQLDialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
     hibernate:
       ddl-auto: update
