--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,13 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.boot.version>1.4.0.RELEASE</spring.boot.version>
-		<hibernate.version>5.2.1.Final</hibernate.version>
+		<spring-boot.version>1.5.7.RELEASE</spring-boot.version>
+		<spirng-cloud.version>Dalston.SR3</spirng-cloud.version>
+		<hibernate.version>5.2.11.Final</hibernate.version>
+		<commons-io.version>2.5</commons-io.version>
+		<commons-lang3.version>3.6</commons-lang3.version>
+		<commons-collections4.version>4.1</commons-collections4.version>
+		<ehcache.version>3.4.0</ehcache.version>
 	</properties>
 
 	<modules>
@@ -27,23 +32,16 @@
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>${spring.boot.version}</version>
+				<version>${spring-boot.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Dalston.SR3</version>
+				<version>${spirng-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.12</version>
-				<scope>test</scope>
 			</dependency>
 
 			<!-- hibernate -->
@@ -62,30 +60,23 @@
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
-				<version>2.5</version>
+				<version>${commons-io.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
-				<version>3.4</version>
+				<version>${commons-lang3.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-collections4</artifactId>
-				<version>4.1</version>
+				<version>${commons-collections4.version}</version>
 			</dependency>
+
 			<dependency>
 				<groupId>net.sf.ehcache</groupId>
 				<artifactId>ehcache</artifactId>
-				<version>2.10.2.2.21</version>
-			</dependency>
-
-
-			<!-- DBDriver -->
-			<dependency>
-				<groupId>org.mariadb.jdbc</groupId>
-				<artifactId>mariadb-java-client</artifactId>
-				<version>1.4.6</version>
+				<version>${ehcache.version}</version>
 			</dependency>
 
 			<dependency>
@@ -98,12 +89,7 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>2.5.0</version>
 			</dependency>
-
-			<dependency>
-				<groupId>com.querydsl</groupId>
-				<artifactId>querydsl-jpa</artifactId>
-				<version>4.1.4</version>
-			</dependency>
+ 
 		</dependencies>
 	</dependencyManagement>
 
