--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
     config:
       server:
         native:
-          search-locations: classpath:configs/
+          search-locations: file:e:/configs/
