--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<commons-collections4.version>4.1</commons-collections4.version>
 		<ehcache.version>3.4.0</ehcache.version>
 		<swagger.version>2.7.0</swagger.version>
+		<querydsl.version>4.1.4</querydsl.version>
 	</properties>
 
 	<modules>
@@ -135,6 +136,31 @@
 						<mainClass>${start-class}</mainClass>
 					</configuration>
 				</plugin>
+
+				<plugin>
+					<groupId>com.mysema.maven</groupId>
+					<artifactId>apt-maven-plugin</artifactId>
+					<version>1.1.3</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>process</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>target/generated-sources/java</outputDirectory>
+								<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+							</configuration>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>com.querydsl</groupId>
+							<artifactId>querydsl-apt</artifactId>
+							<version>${querydsl.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 	</build>
