--- a/uap/src/main/resources/bootstrap.yml
+++ b/uap/src/main/resources/bootstrap.yml
@@ -5,3 +5,6 @@ spring:
     config:
       uri: http://localhost:8000/
       profile: test
+  jpa:
+    hibernate:
+      use-new-id-generator-mappings: true
