--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-boot.version>1.5.7.RELEASE</spring-boot.version>
-		<spirng-cloud.version>Dalston.SR3</spirng-cloud.version>
+		<spring-boot.version>1.5.9.RELEASE</spring-boot.version>
+		<spirng-cloud.version>Edgware.RELEASE</spirng-cloud.version>
 		<hibernate.version>5.2.11.Final</hibernate.version>
-		<commons-io.version>2.5</commons-io.version>
-		<commons-lang3.version>3.6</commons-lang3.version>
+		<commons-io.version>2.6</commons-io.version>
+		<commons-lang3.version>3.7</commons-lang3.version>
 		<commons-collections4.version>4.1</commons-collections4.version>
 		<ehcache.version>3.4.0</ehcache.version>
 		<swagger.version>2.7.0</swagger.version>
@@ -117,6 +117,20 @@
 							<manifest>
 								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 								<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+							</manifest>
+						</archive>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+						<archive>
+							<manifest>
+								<mainClass>${start-class}</mainClass>
+								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 							</manifest>
 						</archive>
 					</configuration>
