--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-boot.version>1.5.9.RELEASE</spring-boot.version>
-		<spirng-cloud.version>Edgware.RELEASE</spirng-cloud.version>
+		<spring-boot.version>2.0.0.M6</spring-boot.version>
+		<spirng-cloud.version>Finchley.M4</spirng-cloud.version>
 		<hibernate.version>5.2.11.Final</hibernate.version>
 		<commons-io.version>2.6</commons-io.version>
 		<commons-lang3.version>3.7</commons-lang3.version>
@@ -179,5 +179,14 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
+	<repositories>
+		<repository>
+			<id>spring-milestones</id>
+			<name>Spring Milestones</name>
+			<url>https://repo.spring.io/libs-milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
