--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring-boot.version>2.0.0.M6</spring-boot.version>
-		<spirng-cloud.version>Finchley.M4</spirng-cloud.version>
+		<spring-boot.version>1.5.9.RELEASE</spring-boot.version>
+		<spirng-cloud.version>Edgware.RELEASE</spirng-cloud.version>
 		<hibernate.version>5.2.11.Final</hibernate.version>
 		<commons-io.version>2.6</commons-io.version>
 		<commons-lang3.version>3.7</commons-lang3.version>
@@ -18,6 +18,7 @@
 		<ehcache.version>3.4.0</ehcache.version>
 		<swagger.version>2.7.0</swagger.version>
 		<querydsl.version>4.1.4</querydsl.version>
+		<spring-rabbit.version>2.0.1.RELEASE</spring-rabbit.version>
 	</properties>
 
 	<modules>
@@ -92,7 +93,11 @@
 				<artifactId>springfox-swagger-ui</artifactId>
 				<version>${swagger.version}</version>
 			</dependency>
-
+			<!-- <dependency>
+				<groupId>org.springframework.amqp</groupId>
+				<artifactId>spring-rabbit</artifactId>
+				<version>${spring-rabbit.version}</version>
+			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
