联通 cloud config和auth

--- a/oauth-client/src/main/resources/application.yml
+++ b/oauth-client/src/main/resources/application.yml
@@ -7,7 +7,9 @@ security:
       client-id: client
       client-secret: test
       user-authorization-uri: http://localhost:8080/oauth/authorize
+      scope: cas     
     resource:
 #      token-info-uri: 
       user-info-uri: http://localhost:8080/test
+      
       
