进行模块集成测试

--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -7,4 +7,4 @@ spring:
     config:
       server:
         native:
-          search-locations: file:e:/configs/
+          search-locations: classpath:/configs/
