--- a/config/src/main/resources/configs/oauth-client-test.yml
+++ b/config/src/main/resources/configs/oauth-client-test.yml
@@ -10,6 +10,6 @@ security:
       scope: cas     
     resource:
 #      token-info-uri: 
-      user-info-uri: http://localhost:8080/test
+      user-info-uri: http://localhost:8080/user
       
       
