--- a/config/src/main/resources/configs/uap-test.yml
+++ b/config/src/main/resources/configs/uap-test.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8001
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/uap
@@ -11,6 +11,16 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
+      use-new-id-generator-mappings: true
+  redis:
+    host: 127.0.0.1
+  cache: 
+    #type: redis
+    type: jcache
+    jcache:
+      config: classpath:jcache.xml
+    cache-names:
+    - user
 eureka:
   client:
     service-url:
