--- a/config/src/main/resources/configs/oauth-server-test.yml
+++ b/config/src/main/resources/configs/oauth-server-test.yml
@@ -15,6 +15,8 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate:
       use-new-id-generator-mappings: true
+  thymeleaf: 
+    cache: false
 eureka:
   client:
     service-url:
